--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-#Add the project dependencies to this file
+Flask==1.0.2
+Flask-Classful==0.14.2
+Flask-SQLAlchemy==2.5.1
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
+SQLAlchemy==1.3.1
+Werkzeug==0.14.1
